# garage

./: .env.example  .env.template  .gitignore  AUDIT_COMPLETION_REPORT.md  CONNECTION_POOLING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  FILE_TREE.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  MIGRATION.md  MYSQL_SETUP.md  PRODUCTION.md  PUBLIC_RELEASE_AUDIT.md  QUICKSTART.md  RBAC.md  RBAC_MATRIX.md  RBAC_QUICKSTART.md  RBAC_SUMMARY.md  README.md  REQUIREMENTS.md  SECURITY.md  SECURITY_AUDIT_2025.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_IMPROVEMENTS.md  SELF_HOSTED_RUNNER.md  SMS_NOTIFICATIONS.md  TROUBLESHOOTING.md  UI_GUIDE.md  app.py  backup.sh  database.py  deploy.sh  doorStatus.py  door_monitor.py  garage-door-monitor.service  garage.service  health_check.sh  init_db.py  install_production.sh  (+28 more)
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  deploy.yml  security-scan.yml  tests.yml
network-examples/: README.md  port-forwarding.md  static-ip.md
static/css/: style.css
static/js/: app.js
templates/: admin.html  base.html  change_password.html  create_user.html  dashboard.html  login.html  privacy_policy.html  profile.html  terms_and_conditions.html  users.html
tests/: conftest.py  test_app_routes.py  test_database_manager.py  test_decorators.py  test_door_status.py  test_user_model.py  test_user_roles.py
