[project]
name = ""
version = "0.0.1"
dependencies = [
    "flask==3.0.0",
    "flask-login==0.6.3",
    "flask-socketio==5.3.6",
    "werkzeug==3.0.1",
    "pymysql==1.1.0",
    "python-dotenv==1.0.0",
    # automationhat only installs on Raspberry Pi (ARM64); skipped on CI/dev machines
    "automationhat==1.0.0 ; platform_machine == 'aarch64'",
    "apscheduler==3.10.4",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
